--- a/app/views/layouts/omninav.erb
+++ b/app/views/layouts/omninav.erb
@@ -57,90 +57,9 @@
     </header>
 
     <div class="homepage" id="main" role="main">
-      <h1>OmniNav Demo</h1>
-      <p>
-        This page is intended only to demonstrate the OmniNav navbar at top as build by the
-        Omninav library.
-      </p>
+      <%= render 'widgets/home_page/hero_panel' %>
+    </div>
 
-      <h3>Table Issue</h3>
-      <p>See <a href="https://github.com/chapmanu/cascade-assets/issues/203">Github Issue #203</a></p>
-      <p>Feel free to remove this in the future.</p>
-
-      <table border="1" cellpadding="5" style="width: 100%; border-color: #313131; border-width: 1px; border-style: solid;">
-        <tbody>
-          <tr>
-            <td valign="top">
-              <p><b>Program </b></p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p><b>Admission Counselor</b></p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p><b>Department</b></p>
-            </td>
-            <td nowrap="nowrap" valign="top" width="148">
-              <p><b>Program Contact</b></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top">
-              <p>Accounting (MS)</p>
-            </td>
-            <td valign="top" width="178">
-              <p>Victoria Kausemeyer<br> (714) 628-2898<br> <a href="mailto:kausmeye@chapman.edu">kausmeye@chapman.edu</a></p>
-            </td>
-            <td valign="top" width="163">
-              <p>Argyros School of <br> Business &amp; Economics<br> (714)&nbsp;997-6684<br> (714)&nbsp;532-6081 (fax)</p>
-            </td>
-            <td valign="top" width="166">
-              <p>Dawn Brewer<br> (714) 744-7694<br> <a href="mailto:dbrewer@chapman.edu">dbrewer@chapman.edu</a></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top">
-              <p>Behavioral and Computational Economics</p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p>Eva Yen<br> (714)&nbsp;997-6711 ext. 7391<br> <a href="mailto:eyen@chapman.edu">eyen@chapman.edu</a></p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p>Argyros School of <br> Business &amp; Economics<br> (714)&nbsp;628-2830<br> (714)&nbsp;628-2881 (fax)</p>
-            </td>
-            <td nowrap="nowrap" valign="top" width="166">
-              <p>Cyndi Dumas<br> (714) 516-4513<br> <a href="mailto:dumas@chapman.edu">dumas@chapman.edu</a></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top">
-              <p>MBA, Full time <br> MBA,&nbsp;Professional<br> MBA, Prague<br> MBA, Joint Programs</p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p>Serena Healey<br> (714) 516-7190<br> <a href="mailto:healey@chapman.edu">healey@chapman.edu</a></p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p>Argyros School of <br> Business &amp; Economics<br> (714)&nbsp;997-6684<br> (714)&nbsp;532-6081 (fax)</p>
-            </td>
-            <td nowrap="nowrap" valign="top" width="166">
-              <p>Dawn Brewer<br> (714) 744-7694<br> <a href="mailto:dbrewer@chapman.edu">dbrewer@chapman.edu</a></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top">
-              <p>MBA,&nbsp;Executive</p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p>Victoria Kausemeyer<br> (714) 628-2898<br> <a href="mailto:kausmeye@chapman.edu">kausmeye@chapman.edu</a></p>
-            </td>
-            <td nowrap="nowrap" valign="top">
-              <p>Argyros School of <br> Business &amp; Economics<br> (714)&nbsp;997-6684<br> (714)&nbsp;532-6081 (fax)</p>
-            </td>
-            <td nowrap="nowrap" valign="top" width="166">
-              <p>Dawn Brewer<br> (714) 744-7694<br> <a href="mailto:dbrewer@chapman.edu">dbrewer@chapman.edu</a></p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
 
       <%= render 'widgets/shared/footer' %>
     </div>
