Increased search speed, removed down arrow on keywords searches, back/forward support, and made results visible after motivation selection

--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-discover-form.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-discover-form.hbs
@@ -3,7 +3,7 @@
 	<legend class="show-for-sr">Search for Degrees and Programs</legend>
 	<fieldset>
 
-		<input type="hidden" name="type" value="undergraduate">
+		<input type="hidden" name="type" value="discover">
 
 		{{> dap-discover-motivations motivations }}
 		
