--- a/subprojects/degrees-and-programs/source/static/app/sass/modules/_dap-feature.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/modules/_dap-feature.scss
@@ -281,10 +281,8 @@ $dap-feature-background-image-width: rem-calc(1396);
 		color: $white;
 	}
 
-	input::-webkit-calendar-picker-indicator:hover {
-		cursor: pointer;
-		color: rgba($white, 0.9);
-		background: transparent;
+	input::-webkit-calendar-picker-indicator {
+		display: none;
 	}
 	// scss-lint:enable VendorPrefix
 
