--- a/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-discover-form.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-discover-form.scss
@@ -9,18 +9,7 @@ $palettes: map-merge($palettes, (
 	padding: rem-calc(35 0 30);
 
 	.filter-types {
-		overflow: hidden;
-		max-height: 0;
-		transition: max-height 0.5s;
-
-		&.open {
-			max-height: rem-calc(300);
-
-			&.show-overflow {
-				overflow: visible;
-			}
-
-		}
+		display: none;
 
 		.row {
 			padding: rem-calc(45 0 25);
