copied variables from existing off canvas nav

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
@@ -1,2 +1,8 @@
 $primary-nav-height: 60px;
 
+// Off Canvas Nav
+
+$cu-off-canvas-nav-mobile-width: 85%;
+$cu-off-canvas-nav-desktop-width: 400px;
+$cu-off-canvas-nav-border-color: #CFCFCF;
+$cu-off-canvas-nav-background: #EAEAEA;
