--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -197,6 +197,101 @@
       }
     }
   }
+
+
+  .off-canvas-utility {
+
+    > ul {
+      width: 100%;
+      float: left;
+      border-bottom: 1px solid $cu-off-canvas-nav-border-color;
+      @include vendorize(box-sizing, border-box);
+
+      > li {
+        background: #676767;
+        border-bottom: 1px solid #cfcfcf;
+        display: table;
+        position: relative;
+        width: 100%;
+        padding-left: 18px;
+
+        > ul {
+          display: none;
+
+          > li {
+            background-color: #f5f5f5;
+            display: block;
+
+            a {
+              display: block;
+              padding: 0.5em 1.325em;
+              color: $grey2-hover;
+              
+              &:active {
+                color: $cu-red;
+              }
+            }
+          }
+        }
+
+        &.open {
+          > a {
+            color: $cu-red;
+          }
+          .toggle > span {
+            @include vendorize(transform, rotate(45deg));
+          }
+        }
+
+        > a, .toggle {
+          height: 46px;
+        }
+
+        > a {
+          display: table-cell;
+          vertical-align: middle;
+          color: #ffffff;
+
+          &:before, svg {
+            position: relative;
+            @include transition(all, 0.175s, ease-in-out);
+          }
+
+          &:before {
+            margin-right: 10px;
+          }
+
+          &:hover {
+            color: $grey;
+
+            &:before {
+              color: $cu-red;
+            }
+          }
+        }
+       
+        .toggle {
+          background-color: #8a8a8a;
+          color: $white;
+          width: 46px;
+          line-height: 45px;
+          text-align: center;
+          position: absolute;
+          cursor: pointer;
+          top: 0;
+          right: 0;
+
+          > span {
+            display: block;
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            @include transition(all, 0.175s, ease-in-out);
+          }
+        }         
+      }
+    }
+
+    
+  }
 }
 
 .off-canvas-overlay {
