--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -75,61 +75,40 @@
   position: relative;
   left: 0;
   cursor: pointer;
-  display: table;
   @include transition(all, 0.375s, ease-in-out);
 
   li {
     list-style: none;
-    margin: 0;
-    height: 46px;
-  }
-
-
-  a {
-    font-weight: 400;
-    position: relative;
-    left: 0px;
-    @include transition(all, 0.175s, ease-in-out);
-
-    &:hover {
-      left: 5px;
-    }
   }
 
   .off-canvas-main {
 
     > ul {
 
-      width: 100%;
-      float: left;
-      border-bottom: 1px solid $cu-off-canvas-nav-border-color;
-      @include vendorize(box-sizing, border-box);
-
       > li {
-        background: #ffffff;
-        border-bottom: 1px solid #8a8a8a;
+        background-color: #eaeaea;
+        list-style: none;
         display: table;
+        border-bottom: 1px solid #cfcfcf;
         position: relative;
         width: 100%;
-        padding-left: 18px;
+        height: 46px;
+        margin: 0;
 
         > ul {
           display: none;
 
           > li {
-            background-color: #f5f5f5;
-            display: block;
+            border-top: 1px solid #c1c1c1;
 
-            a {
-              display: block;
+            > a {
               padding: 0.5em 1.325em;
-              color: $grey2-hover;
+              display: block;
+              vertical-align: middle;
+              color: #2f2f2f;
 
               &:hover {
-                color: $chapman-link-hover;
-              }
-              
-              &:active {
+                left: 5px;
                 color: $cu-red;
               }
             }
@@ -145,17 +124,22 @@
           }
         }
 
+
+        &:active {
+          color: $cu-red;
+        }
+
         > a, .toggle {
           height: 46px;
         }
         
         > a {
-          position: relative;
-          @include transition(all, 0.175s, ease-in-out);
-          display: table-cell;
-          vertical-align: middle;
           color: #2f2f2f;
-          padding: 0 70px 0 22px;
+          padding: 18px;
+          position: relative;
+          display: block;
+          @include transition(all, 0.175s, ease-in-out);
+          vertical-align: middle;
           font-size: 16px;
 
           &:before, svg {
@@ -168,11 +152,8 @@
           }
 
           &:hover {
-            color: $grey;
-
-            &:before {
-              color: $cu-red;
-            }
+            left: 5px;
+            color: $cu-red;
           }
         }
 
@@ -202,33 +183,35 @@
   .off-canvas-utility {
 
     > ul {
-      width: 100%;
-      float: left;
-      border-bottom: 1px solid $cu-off-canvas-nav-border-color;
-      @include vendorize(box-sizing, border-box);
 
       > li {
         background: #676767;
-        border-bottom: 1px solid #cfcfcf;
+        list-style: none;
         display: table;
+        border-bottom: 1px solid #cfcfcf;
         position: relative;
         width: 100%;
-        padding-left: 18px;
+        height: 46px;
+        margin: 0;
 
         > ul {
           display: none;
 
           > li {
-            background-color: #f5f5f5;
-            display: block;
+            border-top: 1px solid #c1c1c1;
 
             a {
               display: block;
               padding: 0.5em 1.325em;
-              color: $grey2-hover;
+              color: #eaeaea;
               
               &:active {
-                color: $cu-red;
+                color: $white;
+              }
+
+              &:hover {
+                left: 5px;
+                color: $white;
               }
             }
           }
@@ -236,7 +219,7 @@
 
         &.open {
           > a {
-            color: $cu-red;
+            color: $white;
           }
           .toggle > span {
             @include vendorize(transform, rotate(45deg));
@@ -248,9 +231,13 @@
         }
 
         > a {
-          display: table-cell;
+          color: #eaeaea;
+          padding: 18px;
+          position: relative;
+          display: block;
+          @include transition(all, 0.175s, ease-in-out);
           vertical-align: middle;
-          color: #ffffff;
+          font-size: 16px;
 
           &:before, svg {
             position: relative;
@@ -262,18 +249,16 @@
           }
 
           &:hover {
-            color: $grey;
-
-            &:before {
-              color: $cu-red;
-            }
+            left: 5px;
+            color: $white;
           }
         }
        
         .toggle {
           background-color: #8a8a8a;
-          color: $white;
+          color: #eaeaea;
           width: 46px;
+          font-size: 16px;
           line-height: 45px;
           text-align: center;
           position: absolute;
@@ -293,6 +278,10 @@
     
   }
 }
+
+
+
+
 
 .off-canvas-overlay {
   background-color: $black;
