added example for utility nav off canvas dropdown

--- a/app/views/omni_nav/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav/_off_canvas_nav.html.erb
@@ -91,6 +91,13 @@
           <span class="toggle">
             <span>&#43;</span>
           </span>
+          <ul>
+              <li><a>Prospective Students</a></li>
+              <li><a>Current Students</a></li>
+              <li><a>Alumni</a></li>
+              <li><a>Faculty &amp; staff</a></li>
+              <li><a>Parents &amp; Families</a></li>
+            </ul>
         </li>
 
         <li>
