replaced plus sign with svg

--- a/app/views/omni_nav/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav/_off_canvas_nav.html.erb
@@ -27,7 +27,12 @@
         <li>
           <a>About</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
 
           <ul>
@@ -49,14 +54,24 @@
         <li>
           <a>Academics</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
         </li>
 
         <li>
           <a>Admission</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
         </li>
 
@@ -67,7 +82,12 @@
         <li>
           <a>Campus Life</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
         </li>
 
@@ -78,7 +98,12 @@
         <li>
           <a>Support</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
         </li>
       </ul>
@@ -89,7 +114,12 @@
         <li>
           <a>Find information for...</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
           <ul>
               <li><a>Prospective Students</a></li>
@@ -107,14 +137,24 @@
         <li>
           <a>Maps &amp; Directories</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
         </li>
 
         <li>
           <a>Blogs</a>
           <span class="toggle">
-            <span>&#43;</span>
+            <span><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+<title></title>
+<g id="icomoon-ignore">
+</g>
+<path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
+</svg></span>
           </span>
         </li>
 
