adds IDs for SVGs and search bar used in javascript

--- a/app/views/omni_nav/omni_nav_v2.html.erb
+++ b/app/views/omni_nav/omni_nav_v2.html.erb
@@ -24,13 +24,13 @@
     <div class="nav-container right-nav-container">
       <div class="primary-nav-action utility-nav-trigger">
         <a class="primary-nav-icon">
-          <svg viewBox="0 0 16 16" class="icon-open-search">
+          <svg viewBox="0 0 16 16" class="icon-open-search" id="icon-open-search">
           <path d="M16 13.5l-4.695-4.695c0.444-0.837 0.695-1.792 0.695-2.805 0-3.314-2.686-6-6-6s-6 2.686-6 6 2.686 6 6 6c1.013 0 1.968-0.252 2.805-0.695l4.695 4.695 2.5-2.5zM2 6c0-2.209 1.791-4 4-4s4 1.791 4 4-1.791 4-4 4-4-1.791-4-4z"></path>
           <path d="M9 5h-2v-2h-2v2h-2v2h2v2h2v-2h2z"></path>
           </svg>
-          <svg viewBox="0 0 16 16" class="icon-close-search">
-            <path d="M16 13.5l-4.695-4.695c0.444-0.837 0.695-1.792 0.695-2.805 0-3.314-2.686-6-6-6s-6 2.686-6 6 2.686 6 6 6c1.013 0 1.968-0.252 2.805-0.695l4.695 4.695 2.5-2.5zM2 6c0-2.209 1.791-4 4-4s4 1.791 4 4-1.791 4-4 4-4-1.791-4-4z"></path>
-          <path d="M3 5h6v2h-6v-2z"></path>
+          <svg viewBox="0 0 16 16" class="icon-close-search hide" id="icon-close-search">
+          <path d="M16 13.5l-4.695-4.695c0.444-0.837 0.695-1.792 0.695-2.805 0-3.314-2.686-6-6-6s-6 2.686-6 6 2.686 6 6 6c1.013 0 1.968-0.252 2.805-0.695l4.695 4.695 2.5-2.5zM2 6c0-2.209 1.791-4 4-4s4 1.791 4 4-1.791 4-4 4-4-1.791-4-4z"></path>
+<path d="M3 5h6v2h-6v-2z"></path>
           </svg>
         </a>
 
