adds CSS for toggling displays and different screen sizes

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 1.75em 1.8em 1.75em 1.25em; // Client request - BarkleyREI
+  padding: 1.75em 1.8em 1.75em 1.25em;
 }
 
 .off-canvas-nav-container {
@@ -86,7 +86,7 @@
     > ul {
 
       > li {
-        background-color: #eaeaea;
+        background-color: #ffffff;
         list-style: none;
         display: table;
         border-bottom: 1px solid #cfcfcf;
