--- a/app/views/omni_nav/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav/_off_canvas_nav.html.erb
@@ -125,7 +125,7 @@
               <li><a>Prospective Students</a></li>
               <li><a>Current Students</a></li>
               <li><a>Alumni</a></li>
-              <li><a>Faculty &amp; staff</a></li>
+              <li><a>Faculty &amp; Staff</a></li>
               <li><a>Parents &amp; Families</a></li>
             </ul>
         </li>
